Feature: CE-2801 fix currencies list, input width

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -44,12 +44,16 @@
 
     .buy-form {
         .cr-modal .cr-modal__container {
-            width: calc(var(--big-gap) * 9);
+            width: calc(var(--big-gap) * 10);
 
             .cr-modal__container-header {
                 background-color: var(--color-green);
                 height: 60px;
                 padding: 7px;
+            }
+
+            .cr-modal__container-content {
+                padding: 0 calc(var(--gap) * 6.33);
             }
         }
 
@@ -124,7 +128,7 @@
                 z-index: 1;
 
                 .buy-form__input {
-                    width: 205px;
+                    width: 235px;
                 }
             }
 
