Feature: CE-2801 add steps

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -332,6 +332,11 @@
             &--help-mobile {
                 color: var(--color-green);
                 cursor: pointer;
+
+                a {
+                    text-decoration: none;
+                    color: var(--color-green);
+                }
                 
                 &:before {
                     content: '?';
