--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -16,3 +16,4 @@
 @import "./BuyWithCreditCard/CreditCardBuyForm.pcss";
 @import "./BuyWithCreditCard/CreditCardPromo.pcss";
 @import "./BuyWithCreditCard/CreditCardFaq.pcss";
+@import "./BuyWithCreditCard/CreditCardSteps.pcss";
