Feature: CE-3224 chatello

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -26,6 +26,7 @@
         border-radius: 3px;
         background: var(--bg-color-light2);
         margin-top: 20px;
+        position: relative;
 
         &__header {
             background: var(--bg-color-light1);
