--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
@@ -121,7 +121,7 @@
             margin-top: 5px;
 
             div {
-                max-width: 100px;
+                max-width: 90px;
                 text-align: center;
             }
 
@@ -129,6 +129,10 @@
                 color: #fff;
             }
         }
+    }
+
+    &__amount {
+        color: var(--color-green);
     }
 
     &__footer {
