--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -17,3 +17,4 @@
 @import "./BuyWithCreditCard/CreditCardPromo.pcss";
 @import "./BuyWithCreditCard/CreditCardFaq.pcss";
 @import "./BuyWithCreditCard/CreditCardSteps.pcss";
+@import "./Chatello/Chatello.pcss";
