Feature: CE-3224 mobile layout

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -20,6 +20,7 @@
     &__container {
         max-width: 940px;
         margin: 0 auto;
+        position: relative;
     }
 
     .section {
@@ -471,6 +472,10 @@
             &__inputs-wrap {
                 flex-wrap: wrap;
                 justify-content: center;
+            }
+
+            &&__inputs-top {
+                flex-wrap: wrap;
             }
 
             &__input-wrap {
