--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -18,3 +18,5 @@
 @import "./BuyWithCreditCard/CreditCardFaq.pcss";
 @import "./BuyWithCreditCard/CreditCardSteps.pcss";
 @import "./Chatello/Chatello.pcss";
+@import "./Chatello/ChatelloTop.pcss";
+@import "./Chatello/ChatelloInfo.pcss";
