--- a/src/custom/styles/containers/Chatello/ChatelloTop.pcss
+++ b/src/custom/styles/containers/Chatello/ChatelloTop.pcss
@@ -142,6 +142,31 @@
 }
 
 
+@media screen and (max-width: 920px) {
+    .pg-chatello__top {
+        &-app {
+            padding-left: 20px;
+            &-items {
+                display: block;
+                z-index: 1;
+                position: relative;
+            }
+
+            &-item {
+                display: inline-block;
+                margin-top: 12px;
+
+                &:after {
+                    display: none !important;
+                }
+
+                &-wrap {
+                    
+                }
+            }
+        }
+    }
+}
 
 @media screen and (max-width: 750px) {
     .pg-chatello {
