Feature: CE-3224 fix layout

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
@@ -125,6 +125,13 @@
                 text-align: center;
             }
 
+
+            &--last {
+                div {
+                    max-width: 140px;
+                }
+            }
+
             &.active {
                 color: #fff;
             }
@@ -150,6 +157,19 @@
 
         span {
             color: var(--color-yellow);
+        }
+    }
+}
+
+
+@media screen and (max-width: 650px) {
+    .pg-buy-with-credit-card {
+        .credit-card-timeline__item {
+            .credit-card-timeline__text {
+                div {
+                    max-width: 90px;
+                }
+            }
         }
     }
 }
