--- a/src/custom/styles/containers/Chatello/Chatello.pcss
+++ b/src/custom/styles/containers/Chatello/Chatello.pcss
@@ -268,7 +268,7 @@
 }
 
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 650px) {
     .pg-chatello {
         .buy-form__input {
             width: 100%;
@@ -344,6 +344,10 @@
 
         .pg-chatello__overlay2-header {
             padding: 67px 0px;
+        }
+
+        .credit-card-timeline {
+            height: 130px;
         }
     }
 }
