Feature: CE-3224 fix layout

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
@@ -130,6 +130,12 @@
                 div {
                     max-width: 140px;
                 }
+
+                &.active {
+                    span {
+                        color: var(--color-yellow);
+                    }
+                }
             }
 
             &.active {
