Last update header and footer

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -207,6 +207,20 @@
                 opacity: 0.5;
             }
             .balance {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                margin: 0 -10px;
+                padding: 0 10px;
+
+                &:hover {
+                    background-color: black;
+                }
+                .currency-group {
+                    display: flex;
+                    align-items: center;
+                }
+
                 .type-currency {
                     font-style: normal;
                     font-weight: normal;
