--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -19,4 +19,5 @@
 @import "./BuyWithCreditCard/CreditCardSteps.pcss";
 @import "./Chatello/Chatello.pcss";
 @import "./Chatello/ChatelloTop.pcss";
+@import "./Chatello/ChatelloTop2.pcss";
 @import "./Chatello/ChatelloInfo.pcss";
