--- a/src/custom/styles/containers/Chatello/ChatelloTop2.pcss
+++ b/src/custom/styles/containers/Chatello/ChatelloTop2.pcss
@@ -2,6 +2,7 @@
     height: 600px;
     background-image: url(./assets/images/chatello-bg-2.png);
     background-size: cover;
+    margin-bottom: 40px;
 
     &-wrap {
         width: 940px;
