--- a/src/custom/styles/containers/Chatello/ChatelloTop2.pcss
+++ b/src/custom/styles/containers/Chatello/ChatelloTop2.pcss
@@ -222,7 +222,7 @@
 
 @media screen and (max-width: 900px) {
     .pg-chatello {
-        &__top {
+        &__top2 {
             display: none;
         }
     }
