Feature: CE-3224 postMessage, min max

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -211,6 +211,7 @@
                     text-transform: uppercase;
                     cursor: pointer;
                     text-align: center;
+                    border: none;
                 }
             }
         }
@@ -376,6 +377,11 @@
 
             &:focus {
                 outline: none;
+            }
+
+            &[disabled] {
+                cursor: default;
+                opacity: 0.5;
             }
         }
 
