--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -454,10 +454,9 @@
     }
 
     .credit-card__iframe {
-        width: 540px;
+        width: 100%;
         max-width: 100vw;
         position: relative;
-        left: -50px;
         border: none;
         height: 420px;
     }
