Feature: CE-3224 some fixes

--- a/src/custom/styles/containers/Chatello/Chatello.pcss
+++ b/src/custom/styles/containers/Chatello/Chatello.pcss
@@ -236,22 +236,19 @@
         }
 
         &-visa {
-            background-image: url(./assets/images/chatello-visa-icon.png);
-            width: 45px;
-            height: 15px;
+            background-image: url(./assets/images/chatello-visa-icon-logo.png);
+            width: 37px;
+            height: 22px;
             position: absolute;
             top: 62px;
             right: 24px;
 
             &:after {
-                content: '';
-                width: 37px;
-                height: 22px;
-                background-image: url(./assets/images/chatello-visa-icon-logo.png);
-                display: block;
+                content: 'mastercard';
+                font-size: 10px;
                 position: relative;
-                left: 60px;
-                top: -3px;
+                left: -7px;
+                top: 9px;
             }
         }
 
@@ -381,6 +378,8 @@
                 position: relative;
                 margin: 0 auto;
                 margin-top: 34px;
+                right: auto;
+                top: auto;
             }
         }
 
