Feature: CE-3224 idk

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -231,6 +231,12 @@
                 color: #fff;
                 margin-top: 32px;
                 margin-bottom: 25px;
+                position: relative;
+            }
+
+            .pg-chatello__overlay-visa {
+                top: -1px;
+                right: 7px;
             }
         }
 
@@ -471,7 +477,13 @@
                 padding: 0 10px;
 
                 h2 {
-                    text-align: center;
+                    padding-right: 57px;
+                    text-align: left;
+                }
+
+                .pg-chatello__overlay-visa {
+                    position: absolute;
+                    top: -26px;
                 }
             }
             
