--- a/src/custom/styles/containers/Chatello/ChatelloInfo.pcss
+++ b/src/custom/styles/containers/Chatello/ChatelloInfo.pcss
@@ -68,9 +68,11 @@
         &__icon5, 
         &__icon6 {
             width: 50px;
-            height: 38px;
+            height: 61px;
             background-repeat: no-repeat;
             background-position: top left;
+            background-size: 110%;
+            margin-top: -8px;
         }
 
         &__icon1 {
@@ -93,7 +95,7 @@
         }
 
         &__item-text {
-            color: #727474;
+            color: #999;
             text-align: left;
             font-size: 14px;
             margin-top: 15px;
@@ -127,5 +129,21 @@
 
     .pg-chatello-info__item-text {
         margin-top: 0;
+    }
+
+
+
+    .pg-chatello-info {
+        &__icon1, 
+        &__icon2, 
+        &__icon3, 
+        &__icon4, 
+        &__icon5, 
+        &__icon6 {
+            margin-top: 0;
+            position: relative;
+            left: -5px;
+            top: 4px;
+        }
     }
 }
