--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
@@ -76,6 +76,11 @@
         &__item {
             position: relative;
             z-index: 1;
+            transition: transform .3s ease;
+
+            &:hover {
+                transform: scale(1.2);
+            }
         }
 
         &__number {
@@ -110,7 +115,7 @@
         }
 
         &__text {
-            color: #5d6161;
+            color: #999;
             font-size: 14px;
             position: absolute;
             width: 200px;
