Feature: CE-3224 fix stuff

--- a/src/custom/styles/containers/Chatello/Chatello.pcss
+++ b/src/custom/styles/containers/Chatello/Chatello.pcss
@@ -108,6 +108,10 @@
         &-caption {
             min-width: 100%;
         }
+
+        &--step4 {
+            height: 148px;
+        }
     }
 
     .credit-card-steps__footer-caption {
@@ -501,6 +505,22 @@
 
         .pg-chatello-steps__bottom-help-button-wrap {
             justify-content: center;
+        }
+
+        .pg-chatello__iframe-modal {
+            .cr-modal {
+                width: 100%;
+                padding: 0;
+
+                &__container {
+                    width: 100%;
+                    max-width: 100%;
+
+                    &-content {
+                        padding: 0 !important;
+                    }
+                }
+            }
         }
     }
 }
