--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -17,6 +17,7 @@
 @import "./BuyWithCreditCard/CreditCardPromo.pcss";
 @import "./BuyWithCreditCard/CreditCardFaq.pcss";
 @import "./BuyWithCreditCard/CreditCardSteps.pcss";
+@import "./BuyWithCreditCard/CreditCardOverlay.pcss";
 @import "./Chatello/Chatello.pcss";
 @import "./Chatello/ChatelloTop.pcss";
 @import "./Chatello/ChatelloTop2.pcss";
