--- a/src/custom/styles/containers/Chatello/Chatello.pcss
+++ b/src/custom/styles/containers/Chatello/Chatello.pcss
@@ -213,139 +213,142 @@
         display: flex;
     }
 
-    .pg-chatello__overlay {
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        -webkit-backdrop-filter: blur(12px);
-        backdrop-filter: blur(12px);
-        z-index: 1;
-        background-color: rgba(34, 38, 39, 0.95);
+}
 
-        &-wrap {
+
+.pg-chatello__overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px);
+    z-index: 1;
+    background-color: rgba(34, 38, 39, 0.95);
+
+    &-wrap {
+        width: 620px;
+        margin: 0 auto;
+        height: calc(100% - 56px);
+        max-width: 100vw;
+    }
+
+    &-header {
+        font-size: 22px;
+        color: #fff;
+        text-align: center;
+        padding: 55px 0 40px 0;
+        position: relative;
+    }
+
+    &-visa {
+        background-image: url(./assets/images/chatello-visa-icon-logo.png);
+        width: 37px;
+        height: 22px;
+        position: absolute;
+        top: 62px;
+        right: 24px;
+
+        &:after {
+            content: 'mastercard';
+            font-size: 10px;
+            position: relative;
+            left: -7px;
+            top: 13px;
+        }
+    }
+
+    &1 {
+        &-blocks {
+            display: flex;
             width: 620px;
             margin: 0 auto;
-            height: calc(100% - 56px);
             max-width: 100vw;
         }
 
-        &-header {
-            font-size: 22px;
+        &-block1,
+        &-block2 {
+            width: 50%;
+        }
+
+
+        &-block1 {
+            font-size: 21px;
             color: #fff;
-            text-align: center;
-            padding: 55px 0 40px 0;
-            position: relative;
-        }
+            margin-right: 55px;
+            line-height: 28px;
+            display: flex;
 
-        &-visa {
-            background-image: url(./assets/images/chatello-visa-icon-logo.png);
-            width: 37px;
-            height: 22px;
-            position: absolute;
-            top: 62px;
-            right: 24px;
-
-            &:after {
-                content: 'mastercard';
-                font-size: 10px;
-                position: relative;
-                left: -7px;
-                top: 13px;
+            span {
+                color: var(--color-green);
             }
         }
 
-        &1 {
-            &-blocks {
-                display: flex;
-                width: 620px;
-                margin: 0 auto;
-                max-width: 100vw;
-            }
-
-            &-block1,
-            &-block2 {
-                width: 50%;
-            }
-
-
-            &-block1 {
-                font-size: 21px;
-                color: #fff;
-                margin-right: 55px;
-                line-height: 28px;
-                display: flex;
-
-                span {
-                    color: var(--color-green);
-                }
-            }
-
-            &-block2 {
-                color: #999;
-                font-size: 14px;
-                line-height: 28px;
-            }
-
-            &-icon {
-                width: 48px;
-                height: 48px;
-                background-image: url(./assets/images/chatello-overlay1-icon.png);
-                min-width: 48px;
-                margin-right: 24px;
-                position: relative;
-                top: 17px;
-
-                &--big {
-                    background-image: url(./assets/images/chatello-overlay-help-icon.png);
-                    width: 72px;
-                    height: 72px;
-                    margin-right: 30px;
-                }
-            }
-
-            &-button-wrap {
-                margin-top: 50px;
-            }
-        }
-
-        &2 {
-            &-header {
-                width: 340px;
-                max-width: calc(100% - 20px);
-                margin: 0 auto;
-            }
-        }
-
-        &-footer {
-            height: 56px;
-            background: rgba(0, 0, 0, 0.2);
-            text-align: center;
-            line-height: 56px;
-            color: var(--limits-text-color);
+        &-block2 {
+            color: #999;
             font-size: 14px;
+            line-height: 28px;
         }
 
-        .buy-form__bottom-text--help {
-            text-align: center;
+        &-icon {
+            width: 48px;
+            height: 48px;
+            background-image: url(./assets/images/chatello-overlay1-icon.png);
+            min-width: 48px;
+            margin-right: 24px;
             position: relative;
-            top: -22px;
+            top: 17px;
 
-            a {
-                color: #96fadc;
+            &--big {
+                background-image: url(./assets/images/chatello-overlay-help-icon.png);
+                width: 72px;
+                height: 72px;
+                margin-right: 30px;
             }
+        }
 
-            &:before {
-                border-color: #96fadc;
-                color: #96fadc;
-            }
+        &-button-wrap {
+            margin-top: 50px;
+        }
+    }
+
+    &2 {
+        &-header {
+            width: 340px;
+            max-width: calc(100% - 20px);
+            margin: 0 auto;
+        }
+    }
+
+    &-footer {
+        height: 56px;
+        background: rgba(0, 0, 0, 0.2);
+        text-align: center;
+        line-height: 56px;
+        color: var(--limits-text-color);
+        font-size: 14px;
+    }
+
+    .buy-form__bottom-text--help {
+        text-align: center;
+        position: relative;
+        top: -22px;
+
+        a {
+            color: #96fadc;
+        }
+
+        &:before {
+            border-color: #96fadc;
+            color: #96fadc;
         }
     }
 }
 
 @supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
-  .pg-chatello .pg-chatello__overlay {  
+  .pg-chatello .pg-chatello__overlay,
+  .pg-buy-with-credit-card .pg-chatello__overlay {
     background-color: rgba(34, 38, 39, 0.35);
     -webkit-backdrop-filter: blur(12px);
     backdrop-filter: blur(12px);
