--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardOverlay.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardOverlay.pcss
@@ -11,4 +11,30 @@
             }
         }
     }
+
+    .credit-card-overlay {
+        &__text {
+            padding-top: 26px;
+
+            p {
+                text-align: center;
+                font-size: 18px;
+                color: #7D9794;
+                margin: 0;
+                text-align: center;
+                font-size: 18px;
+                padding: 0;
+                line-height: 27px;
+            }
+        }
+
+        &__mastercard {
+            width: 36px;
+            height: 30px;
+            background: url(./assets/images/credit-card-mastercard.png);
+            right: -44px;
+            position: absolute;
+            top: 32px;
+        }
+    }
 }
