--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardSteps.pcss
@@ -38,6 +38,28 @@
         }
     }
 
+    &__table {
+        display: flex;
+        justify-content: center;
+        color: var(--limits-text-color);
+        font-size: 14px;
+        padding-top: 25px;
+
+        td:first-child {
+            text-align: right;
+            padding-right: 10px;
+        }
+
+        td {
+            padding-top: 5px;
+        }
+
+        span {
+            color: #fff;
+            font-weight: bold;
+        }
+    }
+
     .credit-card-timeline {
         position: relative;
         display: flex;
