--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -18,6 +18,7 @@
 @import "./BuyWithCreditCard/CreditCardFaq.pcss";
 @import "./BuyWithCreditCard/CreditCardSteps.pcss";
 @import "./BuyWithCreditCard/CreditCardOverlay.pcss";
+@import "./BuyWithCreditCard/CreditCardHeader.pcss";
 @import "./Chatello/Chatello.pcss";
 @import "./Chatello/ChatelloTop.pcss";
 @import "./Chatello/ChatelloTop2.pcss";
