--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -257,6 +257,14 @@
 
         &__input-wrap {
             position: relative;
+
+            &:first-child {
+                z-index: 2;
+            }
+
+            &:last-child {
+                z-index: 1;
+            }
         }
 
         &__input {
@@ -474,7 +482,7 @@
         max-width: 100vw;
         position: relative;
         border: none;
-        height: 435px;
+        height: 460px;
     }
 }
 
@@ -573,6 +581,15 @@
 
         .cr-modal .cr-modal__container {
             max-width: calc(100vw - 25px);
+
+            &-content {
+                padding: 10px !important;
+            }
+        }
+
+        .cr-modal {
+            width: 100%;
+
         }
     }
 }
