--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardHeader.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardHeader.pcss
@@ -39,3 +39,20 @@
         }
     }
 }
+
+
+@media screen and (max-width: 640px) {
+    .pg-buy-with-credit-card {
+        .credit-card-header__wrap {
+            flex-wrap: wrap;
+            padding: 0 10px;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .credit-card-header__icon {
+            margin-top: 30px;
+        }
+    }
+}
