Feature: CE-2801 fix precision

--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -551,7 +551,7 @@
 
             &__limits {
                 height: 85px;
-                padding-top: 18px;
+                padding-top: 0;
 
                 & > div {
                     display: flex;
