Feature: CE-3318 remove footer text

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -374,7 +374,7 @@ input:-webkit-autofill {
   }
   & .copyright {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     font-size: 11px;
     padding: 20px 0;
