--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -3,9 +3,11 @@
     height: 75px;
 
     &-circle {
+      &-0,
       &-1,
       &-2,
-      &-3 {
+      &-3,
+      &-4 {
         align-items: center;
         background: var(--kyc-circle-color);
         display: flex;
@@ -27,25 +29,39 @@
         }
       }
 
+      &-0:after,
       &-1:after,
       &-2:after,
-      &-3:after {
+      &-3:after,
+      &-4:after {
         top: -1px;
       }
     }
 
     &-line {
       &-1,
-      &-2 {
+      &-2,
+      &-3 {
         margin: 15px 0 0 0;
       }
     }
 
     &-items {
-      max-width: 190px;
+      max-width: 240px;
 
       &--long {
         max-width: 285px;
+      }
+    }
+
+    &-zero {
+      .pg-confirm__progress-circle-1 {
+        &:after {
+          color: var(--main-bg);
+        }
+      }
+       .pg-confirm__active-1 {
+        font-weight: normal;
       }
     }
 
@@ -77,6 +93,16 @@
         }
       }
        .pg-confirm__active-3 {
+        font-weight: normal;
+      }
+    }
+    &-fourth {
+      .pg-confirm__progress-circle-4 {
+        &:after {
+          color: var(--main-bg);
+        }
+      }
+       .pg-confirm__active-4 {
         font-weight: normal;
       }
     }
