--- a/src/screens/ConfirmScreen/ConfirmScreen.pcss
+++ b/src/screens/ConfirmScreen/ConfirmScreen.pcss
@@ -89,9 +89,11 @@
     border-radius: 4px 4px 0 0;
 
     &-circle {
+      &-0,
       &-1,
       &-2,
-      &-3 {
+      &-3,
+      &-4 {
         background: var(--kyc-circle-color);
         border-radius: 50%;
         box-sizing: border-box;
@@ -111,6 +113,10 @@
         }
       }
 
+      &-0:after {
+        content: "0";
+      }
+
       &-1:after {
         content: "1";
       }
@@ -123,21 +129,29 @@
         content: "3";
       }
 
+      &-4:after {
+        content: "4";
+      }
+
       &-3 {
         margin-right: 0;
       }
 
+      &-0:after,
       &-1:after,
       &-2:after,
-      &-3:after {
+      &-3:after,
+      &-4:after {
         top: -2px;
         position: relative;
       }
     }
 
     &-line {
+      &-0,
       &-1,
-      &-2 {
+      &-2,
+      &-3 {
         display: inline-block;
         background-color: var(--kyc-progress-line);
         flex: 1;
@@ -154,6 +168,21 @@
       max-width: 360px;
       width: 100%;
       margin: auto;
+    }
+
+    &-zero {
+      .pg-confirm__progress-circle-1 {
+        background: var(--kyc-active-color);
+
+        &:after {
+          color: var(--white);
+        }
+      }
+       .pg-confirm__active-1 {
+        color: var(--color-white);
+        font-weight: bold;
+      }
+    }
     }
 
     &-first {
@@ -183,6 +212,7 @@
         font-weight: bold;
       }
     }
+
     &-third {
       .pg-confirm__progress-circle-3 {
         background: var(--kyc-active-color);
@@ -196,7 +226,36 @@
         font-weight: bold;
       }
     }
-  }
+
+    &-fourth {
+      .pg-confirm__progress-circle-4 {
+        background: var(--kyc-active-color);
+
+        &:after {
+          color: var(--white);
+        }
+      }
+       .pg-confirm__active-4 {
+        color: var(--color-white);
+        font-weight: bold;
+      }
+    }
+    .pg-confirm__progress-circle-1,
+    .pg-confirm__progress-circle-2,
+    .pg-confirm__progress-circle-3,
+    .pg-confirm__progress-circle-4 {
+      &.active-circle {
+        background: #FFD567;
+        &:after {
+          color: black;
+        }
+
+        .pg-confirm__title-text {
+          color: #FFFFFF;
+        }
+      }
+
+    }
 
   &__content {
     width: 100%;
@@ -223,6 +282,14 @@
         &:hover {
           background: var(--button-hover);
         }
+      }
+
+      &-back {
+        background: #E85E59 !important;
+      }
+
+      &-margin {
+        width: 50px;
       }
     }
   }
