--- a/src/screens/PricePackages/PricePackages.pcss
+++ b/src/screens/PricePackages/PricePackages.pcss
@@ -281,6 +281,7 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
+            text-decoration: none;
 
             font-family: Roboto;
             font-style: normal;
