--- a/src/screens/ConfirmScreen/ConfirmScreen.pcss
+++ b/src/screens/ConfirmScreen/ConfirmScreen.pcss
@@ -183,66 +183,66 @@
         font-weight: bold;
       }
     }
-    }
+  }
 
-    &-first {
-      .pg-confirm__progress-circle-1 {
-        background: var(--kyc-active-color);
+  &-first {
+    .pg-confirm__progress-circle-1 {
+      background: var(--kyc-active-color);
 
-        &:after {
-          color: var(--white);
-        }
-      }
-       .pg-confirm__active-1 {
-        color: var(--color-white);
-        font-weight: bold;
+      &:after {
+        color: var(--white);
       }
     }
+     .pg-confirm__active-1 {
+      color: var(--color-white);
+      font-weight: bold;
+    }
+  }
 
-    &-second {
-      .pg-confirm__progress-circle-2 {
-        background: var(--kyc-active-color);
+  &-second {
+    .pg-confirm__progress-circle-2 {
+      background: var(--kyc-active-color);
 
-        &:after {
-          color: var(--white);
-        }
-      }
-       .pg-confirm__active-2 {
-        color: var(--color-white);
-        font-weight: bold;
+      &:after {
+        color: var(--white);
       }
     }
+     .pg-confirm__active-2 {
+      color: var(--color-white);
+      font-weight: bold;
+    }
+  }
 
-    &-third {
-      .pg-confirm__progress-circle-3 {
-        background: var(--kyc-active-color);
+  &-third {
+    .pg-confirm__progress-circle-3 {
+      background: var(--kyc-active-color);
 
-        &:after {
-          color: var(--white);
-        }
-      }
-       .pg-confirm__active-3 {
-        color: var(--color-white);
-        font-weight: bold;
+      &:after {
+        color: var(--white);
       }
     }
+     .pg-confirm__active-3 {
+      color: var(--color-white);
+      font-weight: bold;
+    }
+  }
 
-    &-fourth {
-      .pg-confirm__progress-circle-4 {
-        background: var(--kyc-active-color);
+  &-fourth {
+    .pg-confirm__progress-circle-4 {
+      background: var(--kyc-active-color);
 
-        &:after {
-          color: var(--white);
-        }
-      }
-       .pg-confirm__active-4 {
-        color: var(--color-white);
-        font-weight: bold;
+      &:after {
+        color: var(--white);
       }
     }
-    .pg-confirm__progress-circle-1,
-    .pg-confirm__progress-circle-2,
-    .pg-confirm__progress-circle-3,
+     .pg-confirm__active-4 {
+      color: var(--color-white);
+      font-weight: bold;
+    }
+  }
+  .pg-confirm__progress-circle-1,
+  .pg-confirm__progress-circle-2,
+  .pg-confirm__progress-circle-3,
     .pg-confirm__progress-circle-4 {
       &.active-circle {
         background: #FFD567;
@@ -292,5 +292,9 @@
         width: 50px;
       }
     }
+  }
+
+  &__center {
+    justify-content: center;
   }
 }
