--- a/src/screens/PricePackages/PricePackages.pcss
+++ b/src/screens/PricePackages/PricePackages.pcss
@@ -294,7 +294,9 @@
             &.yellow {
                 background: #FFD567;
                 color: #141717;
+                cursor: default;
             }
+
 
             &.green {
                 background: #11B382;
