--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -134,11 +134,26 @@
     margin-left: 20px;
     margin-right: 20px;
 
+    &-box {
+      &-close {
+        top: 0;
+      }
+    }
+
+    &__progress {
+      height: 105px;
+
+      &-items--long {
+        width: 80%;
+      }
+    }
+
     &__progress-items {
       width: 70%;
 
       &--long {
-        width: 60%;
+        width: 80%;
+        padding-top: 30px;
       }
     }
 
