Update deposit limit

--- a/src/components/DepositCrypto/DepositCrypto.pcss
+++ b/src/components/DepositCrypto/DepositCrypto.pcss
@@ -17,6 +17,14 @@
         width: 56%;
         line-height: 25px;
         margin-bottom: calc(var(--gap) * 3);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .cr-deposit-info-block {
+        font-size: calc(var(--gap) * 2.3);
+        line-height: 25px;
     }
 
     &__copyable {
